--- a/life_expectancy_lab/static/styles.css
+++ b/life_expectancy_lab/static/styles.css
@@ -1,10 +1,13 @@
 
 body{
-  background-color: hsl(344, 94%, 80%);
   font-family: "Sofia", sans-serif;
 }
 
 svg{
   border-style: solid;
   border-width: 1px;
+}
+
+.label {
+  font-size: 15px;
 }
